# clap-permission-flag

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: block-fixup.yml  main.yml
examples/: main.rs
src/: lib.rs
