[package]
name = "clap-permission-flag"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-clique/clap-permission-flag"
documentation = "https://docs.rs/clap-permission-flag"
description = "Drop permissions of a CLI using structopt"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2021"

[dependencies]
failure = "0.1.2"
structopt = "0.2.10"

[target."cfg(unix)".dependencies]
privdrop = "0.3.1"

[dev-dependencies]

[features]
chroot = []
